--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_auth: ^4.7.3
-  firebase_core: ^2.15.1
   dio: ^4.0.6
   shared_preferences: ^2.2.0
   flutter_screenutil: ^5.8.4
@@ -48,13 +46,8 @@ dependencies:
   flutter_switch: ^0.3.2
   lottie: ^2.6.0
   get_storage: ^2.1.1
-  pdf: ^3.10.4
-  printing: ^5.11.0
-  share_extend: ^2.0.0
   path_provider: ^2.1.0
   url_launcher:
-  render:
-  screenshot: ^2.1.0
   flutter_local_notifications: ^15.1.0+1
   timezone: ^0.9.2
   bottom_sheet: ^3.1.2
@@ -83,8 +76,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+   - assets/onboarding/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
