--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   timezone: ^0.9.2
   bottom_sheet: ^3.1.2
   flutter_launcher_icons: ^0.13.1
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
