--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   bottom_sheet: ^3.1.2
   flutter_launcher_icons: ^0.13.1
   pin_code_fields: ^8.0.1
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +81,7 @@ flutter:
   assets:
    - assets/onboarding/
    - assets/images/
+   - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
