--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   cached_network_image: ^3.3.0
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -82,6 +83,8 @@ flutter:
    - assets/onboarding/
    - assets/images/
    - assets/icons/
+   - assets/lottie_files/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
