--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   pin_code_fields: ^8.0.1
   cached_network_image: ^3.3.0
+  dropdown_button2:
 
 
 dev_dependencies:
