--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   cached_network_image: ^3.3.0
   dropdown_button2:
+  carousel_slider: ^4.2.1
 
 
 dev_dependencies:
