--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   cached_network_image: ^3.3.0
   dropdown_button2:
   carousel_slider: ^4.2.1
+  percent_indicator: ^4.2.3
 
 
 dev_dependencies:
